--- a/style.css
+++ b/style.css
@@ -1,20 +1,77 @@
-body{
-    margin:0;
+ul,li{list-style: none;}
+*{margin: 0; padding: 0;}
+.icon {
+    width: 1em; height: 1em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
 }
+body{
+    overflow: hidden;
+ }
 #canvas{
-    background:blue;
+    background:white;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 .actions{
     position:fixed;
     left:0;
-    bottom:0;
+    top:0;
+    padding: 20px;
 }
-.actions > #brush{
-    display:none;
+.actions svg{
+    width: 2em;
+    height: 2em;
+    transition:all 0.3s;
+    margin: 0 5px;
 }
-.actions.x > #brush{
-    display:inline-block;
+.actions svg.active{
+    fill: red;
+    transform: scale(1.2);
 }
-.actions.x > #eraser{
-    display:none;
+.colors{
+    position: fixed;
+    top: 60px;
+    left: 28px;
+}
+.colors>li{
+    width:20px;
+    height:20px;
+    box-shadow: 0 0 2px 0 rgba(0,0,0,0.3);
+    margin:10px 0;
+    border-radius: 50%;
+    transform: scale(1.2);
+}
+.colors>li.red{
+    background: #ff484f;
+}
+.colors>li.green{
+    background: #a0ff8d;
+}
+.colors>li.blue{
+    background: #7277ff;
+}
+.colors>li.active{
+     box-shadow: 0 0 3px rgba(0,0,0,0.8);
+
+ }
+.sizes{
+    position: fixed;
+    top: 60px;
+    right: 20px;
+}
+.sizes>li{
+    margin: 10px 0;
+}
+.sizes>li.thin{
+    height: 0;
+    width: 20px;
+    border-top: 1px solid black;
+}
+.sizes>li.thick{
+    height: 0;
+    width: 20px;
+    border-top: 3px solid black;
 }
